added banner and nav section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Online-Bus-Ticket</title>
+
+  <!-- Font Awesome Kit -->
+  <script src="https://kit.fontawesome.com/b02dfc57dc.js" crossorigin="anonymous"></script>
+
+
   
   <!-- Daisy Ui and Tailwind -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -12,9 +17,108 @@
 <!-- CUstom Css -->
 <link rel="stylesheet" href="style/style.css">
 
+<!-- Google Font Poffins -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+<!-- Tailwind Custom Classes -->
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          clifford: '#da373d',
+          //'color-primary': '#1DD100',
+          'bike-primary-bg': 'rgba(231, 111, 81, 0.10)',
+        }
+      }
+    }
+  }
+</script> 
 </head>
 <body>
-  
+  <header class="container mx-auto">
+   <!-- Nav section -->
+   <section class="mb-8">
+    <nav>
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-[18px]">
+              <li><a>Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Destination</a></li>
+              <li><a>Search</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-3xl font-extrabold">P-Ticket</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 text-[18px]">
+            <li><a>Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Destination</a></li>
+            <li><a>Search</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <a class="btn bg-[#1DD1001A] border border-[#1DD10066] text-xl   text-[#1DD100]">Bus <img src="images/bus-icon.png"></a>
+        </div>
+      </div>
+    </nav>
+   </section>
+
+<!-- banner section -->
+   <section class="mb-8">
+
+    <div class="hero min-h-screen absolute mb-8" style="background-image: url(images/banner.png);">
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-xl">
+          <h1 class="mb-5 text-5xl font-bold">End-to-End Travel with</h1>
+          <h1 class="mb-5 text-5xl font-bold color-primary">P Paribahan</h1>
+          <p class="mb-5">"P Paribahan" appears to be a bus service in Bangladesh. Paribahan means "transport" in Bengali. It's common for bus services indicating their focus on providing transport services.</p>
+          <button class="btn bg-primary border-none font-bold text-xl">Buy Tickets</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- banner card section -->
+    <div class="flex gap-5 justify-center relative top-[525px] ">
+
+      <div class="card card-side px-4 bg-white shadow-xl border-b-4 border-[#1DD100]">
+        <figure><img src="images/people.png" alt="Movie"/></figure>
+        <div class="card-body">
+          <h2 class="card-title font-bold text-4xl">500K+</h2>
+          <p>Registered users</p>
+        </div>
+      </div>
+      <div class="card card-side px-4 bg-white shadow-xl border-b-4 border-[#1DD100]">
+        <figure><img src="images/people.png" alt="Movie"/></figure>
+        <div class="card-body">
+          <h2 class="card-title font-bold text-4xl">500K+</h2>
+          <p>Registered users</p>
+        </div>
+      </div>
+      <div class="card card-side px-4 bg-white shadow-xl border-b-4 border-[#1DD100]">
+        <figure><img src="images/people.png" alt="Movie"/></figure>
+        <div class="card-body">
+          <h2 class="card-title font-bold text-4xl">500K+</h2>
+          <p>Registered users</p>
+        </div>
+      </div>
+
+    </div>
+   </section>
+
+   
+  </header>
+
+  <main></main>
+  <footer></footer>
 
 
   <script src="scripts/script.js"></script>
