--- a/index.html
+++ b/index.html
@@ -612,6 +612,7 @@
 
             <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
               <div class="modal-box text-center">
+                <img class="mx-auto mb-5" src="images/success.png" alt="">
                 <h3 class="font-extrabold text-green-600 text-lg">SUCCESS!</h3>
                 <p class="py-6 font-bold">
                   Thank you for Booking Our Bus Seats. We are working hard to
